# cpp-bazel-googlecloud

./: .gitignore  BUILD.bazel  MODULE.bazel  main.cc
